--- a/main.css
+++ b/main.css
@@ -1251,7 +1251,7 @@ form a:hover{color: #ED3237;}
     padding: 15px;   
 }
 
-.filters-wrapper .filter-btn{
+.filters-wrapper .filter-panel{
     background-color: #fff;
     border: none;
     outline: none;
@@ -1259,7 +1259,7 @@ form a:hover{color: #ED3237;}
     font-size: 1.6rem;
     font-weight: 500;
 }
-.filters-wrapper .filter-btn .chevron{
+.filters-wrapper .filter-panel .chevron{
     font-size: 1.3rem;
     padding: 0 10px;
 }
@@ -1273,4 +1273,146 @@ form a:hover{color: #ED3237;}
 @keyframes chevron-rotate-up{
     0%{transform: rotate(180deg);}
     100%{transform: rotate(0);}
+}
+
+
+
+
+.range-wrapper{
+    width: 100%;
+    padding: 15px 5px;
+}
+
+.price-input {
+    margin: 10px 0 35px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.price-input .field {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.field input {
+    width: 40px;
+    font-size: 1.6rem;
+    text-align: center;
+    border: none;
+    font-weight: 500;
+    color: rgba(0,0,0,0.4);
+    -moz-appearance: textfield;
+}
+.field span{
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: rgba(0,0,0,0.4);
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+.price-input .seperator {
+    width: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 19px;
+}
+.slider {
+    height: 3px;
+    border-radius: 5px;
+    background: #ddd;
+    position: relative;
+}
+.slider .progress {
+    height: 3px;
+    background: #ed3237;
+    border-radius: 5px;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+.range-input {position: relative;}
+.range-input input {
+    position: absolute;
+    top: -5px;
+    height: 5px;
+    width: 100%;
+    pointer-events: none;
+    background: none;
+    -webkit-appearance: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+    height: 13px;
+    width: 13px;
+    border-radius: 50%;
+    pointer-events: auto;
+    -webkit-appearance: none;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.4);
+}
+input[type="range"]::-webkit-slider-thumb:active{box-shadow: 0 0 5px 2px #ED3237;}
+
+
+
+.filter-button{
+    border: none;
+    outline: none;
+    font-size: 1.3rem;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 5px 0;
+    margin-right: 5px;
+    font-weight: 500;
+    color: rgba(0,0,0,0.7);
+    transition: 0.3s;
+}
+.active-filter-button{
+    background-color: #ed3237 !important;
+    color: #fff !important;
+}
+
+
+
+.wrapper-left-panel .main-buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.wrapper-left-panel .main-buttons button{
+    width: 48%;
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+.wrapper-left-panel .main-buttons .confirm-button{
+    background-color: #ed3237;
+    color: #fff;  
+}
+.wrapper-left-panel .main-buttons .confirm-button:hover{
+    animation: shadow-effect-red 1s ease;
+}
+.wrapper-left-panel .main-buttons .reset-button{
+    background-color: #fff;
+    border: 1px solid #ed3237;
+    color: #ed3237;
+    transition: 0.3s;
+}
+.wrapper-left-panel .main-buttons .reset-button:hover{
+    border-color: #23272B;
+    background-color: #23272B;
+    color: #fff;
+    animation: reset-btn-animation 0.2s ease 4;
+}
+
+@keyframes reset-btn-animation{
+    0%{transform: translateX(0);}
+    25%{transform: translateX(3px);}
+    50%{transform: translateX(0);}
+    75%{transform: translateX(-3px);}
+    100%{transform: translateX(0);}
 }
