--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,11 @@ header{width: 100%; position: relative;}
     background-color: #fff;
     padding: 25px 0;
 }
+.mobile-header .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .mobile-canvas-btn{border: none;background: #fff;}
 .mobile-canvas-btn .bars{width: 45px; height: 40px;}
 .mobile-canvas-btn .bars .bar{
@@ -147,8 +152,10 @@ header{width: 100%; position: relative;}
 }
 .mobile-canvas-btn .bars .bar2{width: 70%;}
 .mobile-canvas-btn .bars .bar3{width: 85%;}
-.mh-link{padding: 5px 8px;border-left: 1px solid var(--black-2);}
-.mh-link:hover img{transform: scale(1.2);}
+
+.header-icons{display: flex; align-items: center;}
+.header-icons .icon-link{padding: 5px;border-left: 1px solid var(--black-2);}
+.header-icons .icon-link:hover img{transform: scale(1.2);}
 /*Dropdowns*/
 .language-button{cursor: pointer;}
 .language-button i{font-size: 12px;color: var(--color-1);}
@@ -296,3 +303,79 @@ header{width: 100%; position: relative;}
     padding: 10px;
     box-shadow: 0 0 5px var(--black-3);
 }
+
+/*general header*/
+.general-header{
+    width: 100%;
+}
+.general-header .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.top-navbar{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.top-navbar .left{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 10px 0;
+}
+.top-navbar .right{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+.top-nav-link{
+    font-size: var(--fs-3);
+    color: var(--black-8);
+    position: relative;
+}
+.top-nav-link:hover{
+    color: var(--color-1);
+}
+.top-nav-link:hover::after{
+    transform: scaleX(1);
+    background-color: var(--color-1);
+}
+.tn-dropdown{
+    position: relative;
+    padding: 10px 0;
+}
+.tn-dropdown-menu{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding: 10px;
+    box-shadow: 0 0 5px var(--black-3);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    animation: show-drop-menu 0.5s ease forwards;
+    z-index: 99;
+    background-color: #fff;
+}
+.tn-dropdown-menu a{margin: 4px 0;}
+@keyframes show-drop-menu{
+    0%{opacity: 0;transform: translateY(-20px);}
+    100%{opacity: 1;transform: translateY(0);}
+}
+.tn-dropdown-menu.lg{
+    width: 280px;
+}
+.top-navbar .right .sosial-icons{margin-right: 20px;}
+.top-navbar .right .icon-link{
+    padding: 5px 15px;
+}
+.icon-link.login img{
+    margin-right: 10px;
+}
+.icon-link.login span{color: var(--black-8);}
