--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,4 +28,8 @@
     .top-navbar .right .icon-link{
         padding: 5px 10px;
     }
+    .bottom-nav-link{font-size: 16px;}
+}
+@media only screen and (min-width:1400px){
+    .bottom-nav-link{font-size: 18px;}
 }
