--- a/css/main.css
+++ b/css/main.css
@@ -597,14 +597,83 @@ header{width: 100%; position: relative;}
 .alt-link-item i{padding: 0 5px;}
 
 
-main{
+/*-----------FOOTER-----------*/
+
+footer .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.large-div{
-    width: 50%;
-    height: 500px;
-    background-color: gray;
+.footer-top{
+    width: 100%;
+    padding: 50px 0;
+    display: flex;
+    justify-content: center;
 }
+.footer-top .left{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+.footer-top .left .logo{
+    margin-bottom: 25px;
+}
+.footer-top .right{
+    width: 100%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+.footer-links{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.footer-links span{
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.footer-links a{
+    color: var(--black-7);
+    font-size: var(--fs-3);
+    margin-bottom: 5px;
+}
+.footer-links a:hover{
+    color: var(--color-1);
+}
+.footer-bottom{
+    width: 100%;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-bottom .left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.footer-bottom .left a{color: var(--color-1);}
+.footer-bottom .right{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.footer-bottom span, a{
+    color: var(--black-8);
+    font-size: var(--fs-3);
+}
+
+.footer-bottom a:hover{color: var(--color-1);}
