--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,7 +5,11 @@
 @media only screen and (min-width:540px){
     .header-icons .icon-link{padding: 5px 15px;}
 }
-
+@media only screen and (min-width: 768px){
+    .footer-bottom{flex-direction: row; justify-content: space-between;}
+    .footer-bottom .left{align-items: flex-start;}
+    .footer-bottom .right{align-items: flex-end;}
+}
 
 @media only screen and (min-width:1200px){
     .top-navbar{flex-direction: row;justify-content: space-between;}
@@ -17,6 +21,8 @@
     .bottom-nav-link{font-size: 16px;}
     .alt-category-links .header-link{font-size: 16px;}
     .alt-category-links .alt-link{font-size: 16px;}
+
+    .footer-links{align-items: flex-start;}
 }
 @media only screen and (min-width:1400px){
     .bottom-nav-link{font-size: 18px;}
